--- a/dashboard.html
+++ b/dashboard.html
@@ -196,6 +196,6 @@
             </a>
         </nav>
 
-        <script type="module" src="prototype-mode.js"></script>
+        <script src="prototype-mode.js"></script>
     </body>
 </html>
